[GSTG] Enable service desk email
Related to https://gitlab.com/gitlab-com/gl-infra/infrastructure/-/issues/9079

--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -139,4 +139,5 @@ releases:
           name: gitlab-mailroom-imap-v1
           namespace: {{ $namespace }}
         stringData:
-          password: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".incoming_email_password") }}
+          incoming_email_password: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".incoming_email_password") }}
+          service_desk_email_password: {{ $gkms_omnibus_secrets | exec "jq" (list "-j" ".\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".service_desk_email_password") }}
