Adds a set of custom labels per sidekiq shard
* Places labels which we can use to make it easier to gather metrics vs
complex regexes that perform label rewrites for prometheus

--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -23,6 +23,7 @@ environments:
       # Canary uses the same bucket as production
       - registry_bucket_name: "gitlab-gprd-registry"
       - gitlab_chef_source_name: "gprd"
+      - stage: "cny"
   gprd:
     values:
       - google_project: "gitlab-production"
