Moves our chart location from Pages to a git repo
* This removes any logic associated with ensuring we have a backup
location to install our charts from
* Since we currently pull from a sha, the only option we have is a git
repo anyways
* As we want to avoid a problem with the use of our Pages feature being
down on .com, let's remove all other backup systems logic in favor of
using the git plugin
* Along with using git to pull down our charts, this switches us over to
our dev instance to ensure that we can still deploy if .com is down for
any reason
* For local testing, when using helm version 2, a `helm search repo
gitlab` does not work - this is expected
* Upgrades to CHART_VERSION appear to work just fine, the local repo
transitions to the new configuration without complaint
* Current functionality works on all versions of helm and plugins that
we utilize so no updates are required at the moment
* There's no difference in speed when configuring the git repo with the
`sparse` option, so we'll use the default which is a value of `1`
* This work should allow us to clean up a few functions in the common
repo

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,25 +9,25 @@
 include:
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
     file: "/ci/version-checks.yml"
-    ref: 'v3.2.0'
+    ref: 'v3.3.0'
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
     file: "/ci/deploy.yml"
-    ref: 'v3.2.0'
+    ref: 'v3.3.0'
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
     file: "/ci/except-com.yml"
-    ref: 'v3.2.0'
+    ref: 'v3.3.0'
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
     file: "/ci/except-ops.yml"
-    ref: 'v3.2.0'
+    ref: 'v3.3.0'
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
     file: "/ci/cluster-init-before-script.yml"
-    ref: 'v3.2.0'
+    ref: 'v3.3.0'
   - project: "gitlab-com/gl-infra/k8s-workloads/common"
     file: "/ci/shellcheck.yml"
-    ref: 'v3.2.0'
+    ref: 'v3.3.0'
 
 variables:
-  CI_IMAGE_VERSION: 'v3.2.0'
+  CI_IMAGE_VERSION: 'v3.3.0'
   AUTO_DEPLOY: 'false'
 
 #############################################################
@@ -62,6 +62,7 @@ variables:
       - 'bin/**/*'
       - 'releases/**/*'
       - '*.yaml'
+      - .gitlab-ci.yml
 
 .trigger-qa-smoke:
   extends:
