Adds notification capability from Container Registry
* This will enable the notifications feature for the Container Registry
to send events to rails upon non pull actions performed against the CR
* This will enable us to better monitor and report Container Registry
usage

--- a/releases/gitlab-secrets/helmfile.yaml
+++ b/releases/gitlab-secrets/helmfile.yaml
@@ -103,6 +103,17 @@ releases:
           provider:
             {{ $salesforce_provider | quote | nindent 14 }}
 
+{{- $registry_authorization_header := $gkms_omnibus_secrets | exec "jq" (list "-jc" "[.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".registry_notification_secret]") }}
+
+      - apiVersion: v1
+        kind: Secret
+        metadata:
+          name: gitlab-registry-authorization-header-v1
+          namespace: {{ $namespace }}
+        stringData:
+          secret:
+            {{ $registry_authorization_header | quote | nindent 14 }}
+
       - apiVersion: v1
         kind: Secret
         metadata:
