--- a/releases/gitlab/helmfile.yaml
+++ b/releases/gitlab/helmfile.yaml
@@ -25,6 +25,7 @@ releases:
       - name: "registry.annotations.app\\.gitlab\\.com/env"
         value: {{env "CI_ENVIRONMENT_SLUG" | default .Environment.Name}}
     values:
+      - stage: {{.Environment.Values | getOrNil "stage" | default "main"}}
       - values/values.yaml.gotmpl
       - values/{{.Environment.Name}}.yaml.gotmpl
       - values/values-from-external-sources.yaml.gotmpl
