Provides capabilities for deploying components
* When passing in `COMPONENT` with the desired deployment, we can start
deploying ONLY that component
* Creates a new `COMPONENT_VERSION` variable which does precisely the
same as `GITLAB_IMAGE_TAG`, which I'd like to deprecate
  * This is backward compatible until other tools that use this variable
  are modified with the new preferred variable
* The workflow is as follows:
  1. We ask kubernetes for the versions of various components
  1. We set those versions to the appropriate variables for consumption
  of each component
  1. We'll then look for which component we are attempting to deploy
  1. And set that variable to match that of `COMPONENT_VERSION`
* This cleans up the kubectl command swapping `jq` for the native use of
`jsonpath` and we'll use `cut` to grab the final version
* Adds the necessary canary compatibility variable and sorts the list a
tad
* Removes the registry version which is hardcoded for each environment

--- a/releases/gitlab/helmfile.yaml
+++ b/releases/gitlab/helmfile.yaml
@@ -25,6 +25,7 @@ releases:
       - name: "registry.annotations.app\\.gitlab\\.com/env"
         value: {{env "CI_ENVIRONMENT_SLUG" | default .Environment.Name}}
     values:
+      - values/init-values.yaml.gotmpl
       - values/values.yaml.gotmpl
       - values/{{.Environment.Name}}.yaml.gotmpl
       - values/values-from-external-sources.yaml.gotmpl
