--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -6,14 +6,19 @@ environments:
       - gitlab_endpoint: "https://ops.gitlab.net"
   pre:
     values:
+      - gitlab_deployment_for_image_tag: "gitlab-webservice"
       - google_project: "gitlab-pre"
       - gitlab_endpoint: "https://pre.gitlab.com"
+      - registry_deployment_for_image_tag: "gitlab-registry"
   gstg:
     values:
+      - gitlab_deployment_for_image_tag: "gitlab-webservice"
       - google_project: "gitlab-staging-1"
       - gitlab_endpoint: "https://staging.gitlab.com"
+      - registry_deployment_for_image_tag: "gitlab-registry"
   gprd-cny:
     values:
+      - gitlab_deployment_for_image_tag: "gitlab-cny-webservice"
       - google_project: "gitlab-production"
       - gitlab_endpoint: "https://gitlab.com"
       - gitlab_secrets_gkms_source: "gprd"
@@ -21,12 +26,14 @@ environments:
       - gitlab_secrets_release_name: "gitlab-secrets-cny"
       - gitlab_secrets_namespace: "gitlab-cny"
       - gitlab_namespace: "gitlab-cny"
-      - deployment_for_image_tag: "gitlab-cny-webservice"
       # Canary uses the same bucket as production
       - registry_bucket_name: "gitlab-gprd-registry"
+      - registry_deployment_for_image_tag: "gitlab-cny-registry"
       - gitlab_chef_source_name: "gprd"
       - stage: "cny"
   gprd:
     values:
+      - gitlab_deployment_for_image_tag: "gitlab-webservice"
       - google_project: "gitlab-production"
       - gitlab_endpoint: "https://gitlab.com"
+      - registry_deployment_for_image_tag: "gitlab-registry"
