Fixes the annotation missing the env
* We'll now grab the environment from our pipeline
* The stage must be specified, so the script now intakes an argument
* The use of this argument is as simplistic as possible
* This forces a change to the gitlab-ci file to add said argument

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -162,7 +162,7 @@ pre:upgrade:
     - .pre
     - .only-auto-deploy-false-and-config-changes
   script:
-    - bin/grafana-annotate
+    - bin/grafana-annotate -e $CI_ENVIRONMENT_NAME
     - bin/k-ctl upgrade
   resource_group: pre
   only:
@@ -189,7 +189,7 @@ gstg:upgrade:
     - .gstg
     - .only-auto-deploy-false-and-config-changes
   script:
-    - bin/grafana-annotate
+    - bin/grafana-annotate -e $CI_ENVIRONMENT_NAME
     - bin/k-ctl upgrade
   resource_group: gstg
   only:
@@ -216,7 +216,7 @@ gprd-cny:upgrade:
     - .gprd
     - .only-auto-deploy-false-and-config-changes
   script:
-    - bin/grafana-annotate
+    - bin/grafana-annotate -e $CI_ENVIRONMENT_NAME -s cny
     - bin/k-ctl -s cny upgrade
   resource_group: gprd-cny
   only:
@@ -244,7 +244,7 @@ gprd:upgrade:
     - .only-auto-deploy-false-and-config-changes
   when: manual
   script:
-    - bin/grafana-annotate
+    - bin/grafana-annotate -e $CI_ENVIRONMENT_NAME
     - bin/k-ctl upgrade
   resource_group: gprd
   only:
